Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3219

FIEMAP does not sync data or return cached pages

XMLWordPrintable

    • 3
    • 7860

      Artem Blagodarenko added a comment - 27/Mar/13 7:16 AM

      We have bug, that looks like this.

      After coping of a file with 'cp' to another location in the same fs some empty gaps happened.

      Comparing the good to the bad file, the bad file has a 4096-byte segment of zeros at block offset 6799 of the file, and the last portion of the file (following the last even 1MB multiple) is also zeros. Looking at the bad file's OST object (stripe count is 1), the zero'd regions of the file are holes - no blocks allocated for those portions. The block allocations for the bad file go from 0-6798, block 6799 is missing, then 6800-8703, blocks 8704-8745 are missing. (8704 blocks is 34*1048576; the bad file ends at the last even 1MB boundary).

      The bad file is missing block 6799, and blocks 8704-8745

      Extents for good file

      EXTENTS:
      (ETB0):554244449, (0-127):554255616-554255743, (128-767):554257024-554257663, (768-1535):554257920-554258687, (1536-
      4607):554258944-554262015, (4608-5247):554262528-554263167, (5248-5375):554255744-554255871, (5376-5887):554263296-5
      54263807, (5888-6015):554255872-554255999, (6016-6143):554258688-554258815, (6144-6271):554262144-554262271, (6272-6
      527):554256000-554256255, (6528-6655):554262016-554262143, (6656-7039):554256256-554256639, (7040-7167):554262272-55
      4262399, (7168-7295):554263168-554263295, (7296-7423):554263936-554264063, (7424-7679):554256640-554256895, (7680-78
      07):554262400-554262527, (7808-7935):554263808-554263935, (7936-8063):554256896-554257023, (8064-8319):554257664-554
      257919, (8320-8447):554258816-554258943, (8448-8745):554264064-554264361

      Extents for broken file:

      EXTENTS:
      (0-6798):538994432-539001230, (6800-8703):539001232-539003135

      Lustre client version on this system is 2.2.

      http://review.whamcloud.com/#change,6127

            niu Niu Yawei (Inactive)
            artem_blagodarenko Artem Blagodarenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            18 Start watching this issue

              Created:
              Updated:
              Resolved: