lustre/osc/osc_request.c
@@ -1,5 +1,4 @@
 /* -*- mode: c; c-basic-offset: 8; indent-tabs-mode: nil; -*-
- * vim:expandtab:shiftwidth=8:tabstop=8:
  *
  * GPL HEADER START
  *
@@ -4142,35 +4141,74 @@ static int osc_get_info(struct obd_export *exp, obd_count keylen,
                 ptlrpc_req_finished(req);
                 RETURN(rc);
         } else if (KEY_IS(KEY_FIEMAP)) {
-                struct ptlrpc_request *req;
-                struct ll_user_fiemap *reply;
-                char *bufs[2] = { NULL, key };
-                __u32 size[2] = { sizeof(struct ptlrpc_body), keylen };
-                int rc;
+		struct ll_fiemap_info_key *fm_key =
+			(struct ll_fiemap_info_key *)key;
+		struct ldlm_res_id      res_id;
+		ldlm_policy_data_t      policy;
+		struct lustre_handle    lockh;
+		ldlm_mode_t             mode = 0;
+		struct ptlrpc_request *req;
+		struct ll_user_fiemap *reply;
+		char *bufs[2] = { NULL, key };
+		__u32 size[2] = { sizeof(struct ptlrpc_body), keylen };
+		int rc;
 
+		if (!(fm_key->fiemap.fm_flags & FIEMAP_FLAG_SYNC))
+			goto skip_locking;
+
+		policy.l_extent.start = fm_key->fiemap.fm_start &
+			CFS_PAGE_MASK;
+
+		if (OBD_OBJECT_EOF - fm_key->fiemap.fm_length <=
+		    fm_key->fiemap.fm_start + CFS_PAGE_SIZE - 1)
+			policy.l_extent.end = OBD_OBJECT_EOF;
+		else
+			policy.l_extent.end = (fm_key->fiemap.fm_start +
+					       fm_key->fiemap.fm_length +
+					       CFS_PAGE_SIZE - 1) & CFS_PAGE_MASK;
+
+		osc_build_res_name(fm_key->oa.o_id, fm_key->oa.o_gr, &res_id);
+		mode = ldlm_lock_match(exp->exp_obd->obd_namespace,
+				       LDLM_FL_BLOCK_GRANTED |
+				       LDLM_FL_LVB_READY,
+				       &res_id, LDLM_EXTENT, &policy,
+				       LCK_PR | LCK_PW, &lockh);
+		if (mode) { /* lock is cached on client */
+			if (mode != LCK_PR) {
+				ldlm_lock_addref(&lockh, LCK_PR);
+				ldlm_lock_decref(&lockh, LCK_PW);
+			}
+		} else { /* no cached lock, needs acquire lock on server side */
+			fm_key->oa.o_valid |= OBD_MD_FLFLAGS;
+			fm_key->oa.o_flags |= OBD_FL_SRVLOCK;
+		}
+
+skip_locking:
                 req = ptlrpc_prep_req(class_exp2cliimp(exp), LUSTRE_OST_VERSION,
                                       OST_GET_INFO, 2, size, bufs);
                 if (req == NULL)
-                        RETURN(-ENOMEM);
+			GOTO(drop_lock, rc = -ENOMEM);
 
                 size[REPLY_REC_OFF] = *vallen;
                 ptlrpc_req_set_repsize(req, 2, size);
 
                 rc = ptlrpc_queue_wait(req);
                 if (rc)
-                        GOTO(out1, rc);
+                        GOTO(fini_req, rc);
                 reply = lustre_swab_repbuf(req, REPLY_REC_OFF, *vallen,
                                            lustre_swab_fiemap);
                 if (reply == NULL) {
                         CERROR("Can't unpack FIEMAP reply.\n");
-                        GOTO(out1, rc = -EPROTO);
+                        GOTO(fini_req, rc = -EPROTO);
                 }
 
                 memcpy(val, reply, *vallen);
 
-        out1:
+fini_req:
                 ptlrpc_req_finished(req);
-
+drop_lock:
+		if (mode)
+			ldlm_lock_decref(&lockh, LCK_PR);
                 RETURN(rc);
         }
 
